--- a/src/model/wiki/BC.yml
+++ b/src/model/wiki/BC.yml
@@ -14,7 +14,7 @@ header:
       actor: 
       date: 
       action: 
-      
+  notes: |
 #
 # 2 - Optional information related to opengauquelin database integration
 #
