Continue wiki system

--- a/src/model/Person.yml
+++ b/src/model/Person.yml
@@ -19,13 +19,14 @@ ids-in-sources: {}
 partial-ids: {}
 
 name:
-  given:
   family:
+  given:
+  spouse:           # For married women, added when this is important for the designation of the person
   official:         # As written in the birth certificate
     family:
     given:
   nobl:             # nobiliary-particle: de d' di del von...
-  fame:             # stage, scene
+  fame:             # stage, scene - when the person is known using a name different from family / given 
     full:           # ex Mistinguett or Stromae
     family: 
     given: 
