Fix wikidata ids-in-sources

--- a/data/db/init/tweaks/D6.yml
+++ b/data/db/init/tweaks/D6.yml
@@ -16,7 +16,7 @@
     d6: '234'
     ertel-sport: '2318'
     wd: Q522782
-  ids-partial:
+  partial-ids:
     lerrcp: D6-234
     ertel: ES-2318
     wd: Q522782
