Modify name management

--- a/data/db/init/tweaks/muller-234-women.yml
+++ b/data/db/init/tweaks/muller-234-women.yml
@@ -274,7 +274,8 @@
   partial-ids:
     wd: Q235507
   name:
-    usual: Mistinguett
+    fame:
+      full: Mistinguett
     official:
       family: Bourgeois
       given: Jeanne Florentine
