Doc - update page install + minor fixes

--- a/config.env.dist
+++ b/config.env.dist
@@ -1,6 +1,8 @@
-#   
-# File used by code located in manage/
-#     
+#
+# File currently only used by code located in manage/
+# Repeats parameters already present in config.yml
+# Apart from code located in manage/ g5 code only uses config.yml
+#
 
 # ---------------------------------------------------------------------------------------------------
 # DB connection
