--- a/config.yml.dist
+++ b/config.yml.dist
@@ -1,5 +1,5 @@
 #
-# Configuration for https://github.com/tig12/gauquelin5
+# Configuration for https://github.com/tig12/g5
 #
 
 # Directories where unversioned data files are stored
