--- a/data/db/source/g5.yml
+++ b/data/db/source/g5.yml
@@ -10,4 +10,4 @@ author: Thierry Graff
 description: |
   Computer program developped to build the Open Gauquelin Database (current site).
   <br>Documentation is located at <a href="https://tig12.github.io/g5">tig12.github.io/g5</a>
-  <br>Source code can be downloaded from <a href="https://github.com/tig12/gauquelin5">github.com/tig12/gauquelin5</a>
+  <br>Source code can be downloaded from <a href="https://github.com/tig12/g5">github.com/tig12/g5</a>
