--- a/data/db/init/lerrcp-tweak/E1.yml
+++ b/data/db/init/lerrcp-tweak/E1.yml
@@ -7,14 +7,14 @@
 
 -
   NUM: 1520
-  DATE: '1890-07-31 15:00+00:09'
+  DATE: '1890-07-31 15:00'
   build-notes:
     - 2019-10-15 23:02:27+02:00 Fixed DATE with record 743
     - legal time = 15:00 (Müller 1083MED 743)
   
 -
   NUM: 1806
-  DATE: '1876-05-28 16:00+00:01'
+  DATE: '1876-05-28 16:00'
   build-notes:
     - 2019-10-15 23:02:21+02:00 Fixed DATE with record 914
     - legal time = 16:00 (Müller 1083MED 914)
